--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cardview_task_item"
-        android:layout_margin="10dp"
-        >
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="#b5f2c8"
+    app:cardElevation="0dp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,12 +18,18 @@
                 android:layout_weight="1"
                 android:id="@+id/cardview_task_plant_name"
                 android:textStyle="bold"
+                android:textSize="15sp"
+                android:fontFamily="sans-serif-smallcaps"
+                android:textColor="@android:color/black"
                 />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:id="@+id/cardview_task_action"
+                android:textSize="15sp"
+                android:fontFamily="sans-serif-smallcaps"
+                android:textColor="@android:color/black"
                 />
             <CheckBox
                 android:layout_width="0dp"
@@ -33,10 +37,10 @@
                 android:layout_weight="0.3"
                 android:gravity="end"
                 android:layout_gravity="end"
+                android:buttonTint="#278527"
                 android:id="@+id/cardview_task_check_task"/>
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
 
 
 </androidx.cardview.widget.CardView>
