--- a/app/src/main/res/layout/activity_add_plant2.xml
+++ b/app/src/main/res/layout/activity_add_plant2.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/add_plant_background">
+        android:background="@drawable/proba1">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,18 +19,17 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="cursive"
-            android:textSize="45sp"
             android:text="@string/plant_add_plant_title"
-            android:layout_marginTop="20sp"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
-            android:layout_marginBottom="30sp"
-            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:id="@+id/plant_title"
+            android:padding="5dp"
+            android:textColor="@android:color/black"
+            android:fontFamily="sans-serif-smallcaps"
             android:layout_gravity="center"
-            android:gravity="center"/>
+            android:textAlignment="center"
+            android:layout_marginTop="15sp"
+            android:id="@+id/plant_title"
+            />
 
         <EditText
             android:layout_width="match_parent"
@@ -38,8 +37,8 @@
             android:textSize="16sp"
             android:hint="@string/plant_name"
             android:layout_marginTop="20sp"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginStart="10sp"
             android:inputType="text"
             android:layout_marginBottom="30sp"
             android:background="@drawable/rounded_edittext"
@@ -52,8 +51,8 @@
             android:textSize="16sp"
             android:inputType="text"
             android:hint="@string/plant_description"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
             android:layout_marginBottom="30sp"
             android:background="@drawable/rounded_edittext"
             android:padding="5dp"
@@ -64,8 +63,8 @@
             android:textSize="16sp"
             android:inputType="text"
             android:hint="@string/plant_notes"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
             android:layout_marginBottom="30sp"
             android:background="@drawable/rounded_edittext"
             android:padding="5dp"
@@ -79,8 +78,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.2"
                 android:text="@string/plant_watering_needs"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
                 android:layout_marginBottom="30sp"
                 android:textSize="16sp"
                 android:background="@drawable/rounded_edittext"
@@ -89,8 +88,8 @@
                 android:layout_width="0dp"
                 android:layout_height="30sp"
                 android:layout_weight="0.8"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
                 android:layout_marginBottom="30sp"
                 android:textSize="16sp"
                 android:background="@drawable/rounded_edittext"
@@ -107,8 +106,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.2"
                 android:text="@string/plant_fertilizing_needs"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
                 android:layout_marginBottom="30sp"
                 android:textSize="16sp"
                 android:background="@drawable/rounded_edittext"
@@ -117,8 +116,8 @@
                 android:layout_width="0dp"
                 android:layout_height="30sp"
                 android:layout_weight="0.8"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
                 android:layout_marginBottom="30sp"
                 android:textSize="16sp"
                 android:background="@drawable/rounded_edittext"
@@ -135,8 +134,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.2"
                 android:text="@string/plant_light_conditions"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
                 android:layout_marginBottom="30sp"
                 android:textSize="16sp"
                 android:background="@drawable/rounded_edittext"
@@ -145,8 +144,8 @@
                 android:layout_width="0dp"
                 android:layout_height="30sp"
                 android:layout_weight="0.8"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
                 android:layout_marginBottom="30sp"
                 android:textSize="16sp"
                 android:background="@drawable/rounded_edittext"
@@ -163,8 +162,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.3"
                 android:text="@string/plant_outdoor_plant"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
                 android:layout_marginBottom="30sp"
                 android:textSize="16sp"
                 android:background="@drawable/rounded_edittext"
@@ -178,8 +177,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edittext"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
                 android:layout_marginBottom="30sp"
                 android:padding="5dp"
                 android:id="@+id/radio_group_outdoor_plant">
@@ -204,8 +203,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.3"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginRight="10sp"
+                    android:layout_marginStart="10sp"
+                    android:layout_marginEnd="10sp"
                     android:layout_marginBottom="30sp"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
@@ -216,8 +215,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.7"
-                    android:layout_marginLeft="10sp"
-                    android:layout_marginRight="10sp"
+                    android:layout_marginStart="10sp"
+                    android:layout_marginEnd="10sp"
                     android:layout_marginBottom="30sp"
                     android:textSize="16sp"
                     android:background="@drawable/rounded_edittext"
@@ -242,8 +241,8 @@
         <ImageView
             android:layout_width="200sp"
             android:layout_height="200sp"
-            android:layout_marginLeft="10sp"
-            android:layout_marginRight="10sp"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
             android:layout_marginBottom="30sp"
             android:layout_gravity="center"
             android:background="@color/colorWhite"
