--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -8,7 +8,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/proba1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,22 +20,30 @@
             android:layout_height="wrap_content"
             android:text="@string/gallery_empty"
             android:visibility="invisible"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textColor="@android:color/black"
+            android:layout_gravity="center"
+            android:textAlignment="center"
             android:id="@+id/empty_gallery"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:id="@+id/gallery_plant_name"
-            android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:padding="5dp"
-            android:layout_marginTop="15sp"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black"
+            android:fontFamily="sans-serif-smallcaps"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="15sp"/>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
+            android:background="@android:color/transparent"
             android:id="@+id/gallery_recycler_view">
         </androidx.recyclerview.widget.RecyclerView>
 
