--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,8 +25,8 @@
             android:hint="@string/login_email"
             android:id="@+id/email"
             android:layout_marginTop="100dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:inputType="textEmailAddress"
             android:padding="5dp"
             android:background="@drawable/rounded_edittext"
@@ -39,8 +39,8 @@
             android:id="@+id/password"
             android:padding="5dp"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:inputType="textPassword"
             android:background="@drawable/rounded_edittext"
             />
@@ -51,8 +51,8 @@
             android:text="@string/login_submit_button"
             android:id="@+id/submit"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginStart="50dp"
             android:background="@color/colorWhite"/>
         <LinearLayout
             android:layout_width="match_parent"
