--- a/app/src/main/res/layout/all_plants.xml
+++ b/app/src/main/res/layout/all_plants.xml
@@ -6,8 +6,8 @@
     android:id="@+id/card_view"
     android:layout_marginTop="6dp"
     android:layout_marginBottom="6dp"
-    android:layout_marginLeft="6dp"
-    android:layout_marginRight="6dp"
+    android:layout_marginStart="6dp"
+    android:layout_marginEnd="6dp"
     android:layout_gravity="center"
     app:layout_anchorGravity="center"
     app:cardCornerRadius="@android:dimen/notification_large_icon_height"
@@ -29,8 +29,8 @@
                     android:fontFamily="sans-serif-black"
                     android:textColor="@color/colorWhite"
                     android:id="@+id/cardview_plant_name"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_gravity="center"/>
 
 
