--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -3,26 +3,63 @@
     android:id="@+id/image_dialog_root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:gravity = "center">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/image_date_added"
-        android:layout_gravity="center"
-        android:gravity="center"/>
-    <ImageView
-        android:id="@+id/your_image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:contentDescription="@string/plant_image_content_description"
-        />
-    <Button
+    android:background="#73DB8B"
+    android:gravity = "center"
+    >
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/delete_picture"
-        android:id="@+id/delete_pic"
-        android:background="@drawable/rounded_edittext"
+        android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="340dp"
+        android:layout_height="wrap_content">
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:id="@+id/image_date_added"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_gravity="center"
+        android:layout_marginStart="10sp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@android:color/black"/>
+
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="30sp"
+            android:layout_weight="0.2"
+            android:id="@+id/delete_pic"
+            android:layout_gravity="end"
+            android:src="@drawable/delete_pic"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/left_arrow_final"
+            android:id="@+id/image_dialog_left"/>
+    <ImageView
+        android:id="@+id/your_image"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:contentDescription="@string/plant_image_content_description"
+        android:layout_marginBottom="30sp"
         />
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/image_dialog_right"
+            android:src="@drawable/right_arrow_final"/>
+    </LinearLayout>
+    </LinearLayout>
+
 </FrameLayout>
