--- a/app/src/main/res/layout/new_app_widget.xml
+++ b/app/src/main/res/layout/new_app_widget.xml
@@ -2,35 +2,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#09C"
+    android:background="#b5f2c8"
     android:padding="@dimen/widget_margin"
 
     android:clickable="true"
     android:focusable="true">
 
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:id="@+id/linear_widget">
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:id="@+id/widget_click_on_me"
         android:text="@string/widget_open_app"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@color/colorWhite"
+        android:textAllCaps="false"
+        android:background="@drawable/rounded_button"
         />
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:id="@+id/widget_update"
         android:layout_below="@id/widget_click_on_me"
         android:text="@string/widget_refresh_widget"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@color/colorWhite"
+        android:textAllCaps="false"
+        android:background="@drawable/rounded_button"
         />
+</LinearLayout>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/widget_list"
-        android:background="@color/colorPrimary"
         tools:listitem="@layout/widget_list_view_row"
         android:clickable="false"
         android:duplicateParentState="true"
-        android:layout_below="@+id/widget_update"
+        android:layout_below="@+id/linear_widget"
         >
 
 
