--- a/app/src/main/res/layout/widget_list_view_row.xml
+++ b/app/src/main/res/layout/widget_list_view_row.xml
@@ -4,24 +4,35 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:id="@+id/widget_list_row_linear"
-    android:clickable="false">
+    android:clickable="false"
+    android:layout_marginBottom="5dp">
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/widget_plant_name"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@android:color/black"
         android:clickable="false"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/widget_plant_task"
-        android:clickable="false"/>
+        android:clickable="false"
+        android:textSize="15sp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@android:color/black"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.4"
         android:id="@+id/widget_plant_task_done"
-        android:clickable="false"/>
+        android:clickable="false"
+        android:textSize="15sp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@android:color/black"/>
 
 </LinearLayout>
