--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/register_activity_background_image"
+        android:background="@drawable/proba7"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
